--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <!-- Caixa de pergunta com botão de limpar -->
 <div class="pergunta-container">
   <input type="text" id="perguntaInput" placeholder="Teste sua cópia aqui!" class="pergunta-input">
-  <button class="clear-btn" onclick="document.getElementById('perguntaInput').value=''">Apagar Texto</button>
+  <button class="clear-btn" onclick="document.getElementById('perguntaInput').value=''">X</button>
 </div>
 
 <style>
@@ -142,6 +142,10 @@
     <span class="codigo-boleto">40192025244600000000300001280866912180000059700</span>
     <button class="copy-btn">Copiar</button>
   </div>
+
+  <h4>PIX Copia e Cola</h4>
+
+<img src="serena.png" alt="serena.png" style="width: 100%; height: auto;">
 
   <h4>PIX Copia e Cola</h4>
   <div class="linha-boleto">
