--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 <!-- Caixa de pergunta com botão de limpar -->
 <div class="pergunta-container">
-  <input type="text" id="perguntaInput" placeholder="Teste o código copiado!" class="pergunta-input">
+  <input type="text" id="perguntaInput" placeholder="Teste aqui o código copiado!" class="pergunta-input">
   <button class="clear-btn" onclick="document.getElementById('perguntaInput').value=''">
     <span class="material-icons">close</span>
   </button>
@@ -149,9 +149,27 @@
   
   <h4>Códigos de Barras</h4>
 
+<div class="linha-boleto">
+    <span class="nome-boleto">ÁGUAS DO PARÁ (VILA) R$ 49,10 - Venc:04/10</span>
+    <span class="codigo-boleto">826700000001491047830006002025150455981701001043</span>
+    <button class="copy-btn">Copiar</button>
+  </div>
+
+<div class="linha-boleto">
+    <span class="nome-boleto">ÁGUAS DO PARÁ (LOJA) R$ 195,70 - Venc:04/10</span>
+    <span class="codigo-boleto">826600000010957047830006002025150455990801001043</span>
+    <button class="copy-btn">Copiar</button>
+  </div>
+
   <div class="linha-boleto">
-    <span class="nome-boleto">SISTEMA SENSEBOARD R$ 597 - Venc:28/09</span>
-    <span class="codigo-boleto">40192025244600000000300001280866912180000059700</span>
+    <span class="nome-boleto">CASAS BAHIA 12/15 R$ 349,19 - Venc:14/10</span>
+    <span class="codigo-boleto">00190000090354628100153292868170112340000034919</span>
+    <button class="copy-btn">Copiar</button>
+  </div>
+
+  <div class="linha-boleto">
+    <span class="nome-boleto">SISTEMA SENSEBOARD R$ 597 - Venc:28/10</span>
+    <span class="codigo-boleto">40192025247500000000200001515980312480000059700</span>
     <button class="copy-btn">Copiar</button>
   </div>
 
@@ -164,6 +182,12 @@
     <span class="nome-boleto">MÁRCIA - FEVEREIRO - R$ 1.197,55</span>
     <span class="codigo-boleto">00020101021226770014BR.GOV.BCB.PIX2555api.itau/pix/qr/v2/49f8e9f6-a667-490e-8ecd-0768f4587ac95204000053039865802BR5921CONSORCIO
       OMEGA GD 126005BELEM62070503***6304F79D</span>
+    <button class="copy-btn">Copiar</button>
+  </div>
+
+  <div class="linha-boleto">
+    <span class="nome-boleto">MÁRCIA - SETEMBRO - R$ 1.161,94</span>
+    <span class="codigo-boleto">00020101021226770014BR.GOV.BCB.PIX2555api.itau/pix/qr/v2/8b1134e9-b494-4967-8e0a-4bef9f5c2d015204000053039865802BR5921CONSORCIO OMEGA GD 126005BELEM62070503***6304C7A1</span>
     <button class="copy-btn">Copiar</button>
   </div>
 
