--- a/index.html
+++ b/index.html
@@ -150,22 +150,41 @@
   <h4>Códigos de Barras</h4>
 
 <div class="linha-boleto">
-    <span class="nome-boleto">ÁGUAS DO PARÁ (VILA) R$ 49,10 - Venc:04/10</span>
+    <span class="nome-boleto">ENERGIA EQUATORIAL KITNET E R$ 682,20_Venc:28/09</span>
+    <span class="codigo-boleto">00190000090337338413411506763173500000000068220</span>
+    <button class="copy-btn">Copiar</button>
+  </div>
+
+  <div class="linha-boleto">
+    <span class="nome-boleto">ENERGIA EQUATORIAL KITNET C R$ 922,80_Venc:28/09</span>
+    <span class="codigo-boleto">00190000090337338419110669821174600000000092280</span>
+    <button class="copy-btn">Copiar</button>
+  </div>
+
+<div class="linha-boleto">
+    <span class="nome-boleto">ÁGUAS DO PARÁ (VILA) R$ 49,10_Venc:04/10</span>
     <span class="codigo-boleto">826700000001491047830006002025150455981701001043</span>
     <button class="copy-btn">Copiar</button>
   </div>
 
 <div class="linha-boleto">
-    <span class="nome-boleto">ÁGUAS DO PARÁ (LOJA) R$ 195,70 - Venc:04/10</span>
+    <span class="nome-boleto">ÁGUAS DO PARÁ (LOJA) R$ 195,70_Venc:04/10</span>
     <span class="codigo-boleto">826600000010957047830006002025150455990801001043</span>
     <button class="copy-btn">Copiar</button>
   </div>
 
   <div class="linha-boleto">
-    <span class="nome-boleto">CASAS BAHIA 12/15 R$ 349,19 - Venc:14/10</span>
+    <span class="nome-boleto">CASAS BAHIA 12/15 R$ 349,19_Venc:14/10</span>
     <span class="codigo-boleto">00190000090354628100153292868170112340000034919</span>
     <button class="copy-btn">Copiar</button>
   </div>
+
+ <div class="linha-boleto">
+    <span class="nome-boleto">SISTEMA CLARIAI R$ 221,90_Venc:20/10</span>
+    <span class="codigo-boleto">46191.11000 00000.000034 65545.240015 5 12400000022190</span>
+    <button class="copy-btn">Copiar</button>
+  </div>
+
 
   <div class="linha-boleto">
     <span class="nome-boleto">SISTEMA SENSEBOARD R$ 597 - Venc:28/10</span>
