--- a/index.html
+++ b/index.html
@@ -149,32 +149,38 @@
   
   <h4>Códigos de Barras</h4>
   
-<div class="linha-boleto">
-    <span class="nome-boleto">ÁGUAS DO PARÁ (LOJA) R$ 195,70_Venc:04/10</span>
-    <span class="codigo-boleto">826600000010957047830006002025150455990801001043</span>
-    <button class="copy-btn">Copiar</button>
-  </div>
-
   <div class="linha-boleto">
     <span class="nome-boleto">CASAS BAHIA 12/15 R$ 349,19_Venc:14/10</span>
     <span class="codigo-boleto">00190000090354628100153292868170112340000034919</span>
     <button class="copy-btn">Copiar</button>
   </div>
-
- <div class="linha-boleto">
-    <span class="nome-boleto">SISTEMA CLARIAI R$ 221,90_Venc:20/10</span>
-    <span class="codigo-boleto">46191.11000 00000.000034 65545.240015 5 12400000022190</span>
-    <button class="copy-btn">Copiar</button>
-  </div>
-
-
+ 
   <div class="linha-boleto">
     <span class="nome-boleto">SISTEMA SENSEBOARD R$ 597 - Venc:28/10</span>
     <span class="codigo-boleto">40192025247500000000200001515980312480000059700</span>
     <button class="copy-btn">Copiar</button>
   </div>
 
+<div class="linha-boleto">
+    <span class="nome-boleto">ENERGIA KITNET C R$ 737,31 - Venc:28/10</span>
+    <span class="codigo-boleto">00190000090337338420930595895175400000000073731</span>
+    <button class="copy-btn">Copiar</button>
+  </div>
+
+<div class="linha-boleto">
+    <span class="nome-boleto">ENERGIA KITNET E R$ 643,28 - Venc:28/10</span>
+    <span class="codigo-boleto">00190000090337338417560980373173900000000064328</span>
+    <button class="copy-btn">Copiar</button>
+  </div>
+
+
   <h4>PIX Copia e Cola</h4>
+
+<div class="linha-boleto">
+    <span class="nome-boleto">INTERNET NIO R$ 163,13 - Venc:23/10</span>
+    <span class="codigo-boleto">00020126700014br.gov.bcb.pix0136d8c9d705-a4b9-4963-8ddf-8fbc8548c6510208CLIENTCO52040000530398654130000000163.135802BR5908CLIENTCO6014RIO DE JANEIRO6229052520123471990623531860002006304201C</span>
+    <button class="copy-btn">Copiar</button>
+  </div>
 
 <img src="serena.png" alt="serena.png" style="width: 100%; height: auto;">
 
