--- a/index.html
+++ b/index.html
@@ -150,12 +150,6 @@
   <h4>Códigos de Barras</h4>
   
 <div class="linha-boleto">
-    <span class="nome-boleto">SISTEMA SENSEBOARD R$ 597 - Venc:28/10</span>
-    <span class="codigo-boleto">40192025247500000000200001515980312480000059700</span>
-    <button class="copy-btn">Copiar</button>
-  </div>
-
-<div class="linha-boleto">
     <span class="nome-boleto">ENERGIA KITNET C R$ 737,31 - Venc:28/10</span>
     <span class="codigo-boleto">00190000090337338420930595895175400000000073731</span>
     <button class="copy-btn">Copiar</button>
@@ -167,12 +161,25 @@
     <button class="copy-btn">Copiar</button>
   </div>
 
+<div class="linha-boleto">
+    <span class="nome-boleto">ENERGIA LOJA (EQUATORIAL) R$ 207,06 - Venc:05/11</span>
+    <span class="codigo-boleto">00190.00009 03373.384167 61217.105172 1 00000000020706</span>
+    <button class="copy-btn">Copiar</button>
+  </div>
+
+<div class="linha-boleto">
+    <span class="nome-boleto">SISTEMA CLARIAI R$ 221,90 - Venc:20/11</span>
+    <span class="codigo-boleto">46191.11000 00000.000034 73225.956017 1 12710000022190</span>
+    <button class="copy-btn">Copiar</button>
+  </div>
+
+
 
   <h4>PIX Copia e Cola</h4>
 
 <div class="linha-boleto">
-    <span class="nome-boleto">INTERNET NIO R$ 163,13 - Venc:23/10</span>
-    <span class="codigo-boleto">00020126700014br.gov.bcb.pix0136d8c9d705-a4b9-4963-8ddf-8fbc8548c6510208CLIENTCO52040000530398654130000000163.135802BR5908CLIENTCO6014RIO DE JANEIRO6229052520123471990623531860002006304201C</span>
+    <span class="nome-boleto">INTERNET NIO R$ 163,08 - Venc:24/11</span>
+    <span class="codigo-boleto">00020126700014br.gov.bcb.pix013668888c34-b753-4269-bc8a-8761fbafe9f60208CLIENTCO52040000530398654130000000163.085802BR5908CLIENTCO6014RIO DE JANEIRO62290525201234719906342884850020063047324</span>
     <button class="copy-btn">Copiar</button>
   </div>
 
@@ -189,6 +196,12 @@
   <div class="linha-boleto">
     <span class="nome-boleto">MÁRCIA - SETEMBRO - R$ 1.161,94</span>
     <span class="codigo-boleto">00020101021226770014BR.GOV.BCB.PIX2555api.itau/pix/qr/v2/8b1134e9-b494-4967-8e0a-4bef9f5c2d015204000053039865802BR5921CONSORCIO OMEGA GD 126005BELEM62070503***6304C7A1</span>
+    <button class="copy-btn">Copiar</button>
+  </div>
+
+<div class="linha-boleto">
+    <span class="nome-boleto">MÁRCIA - OUTUBRO - R$ 67,81</span>
+    <span class="codigo-boleto">00020101021226770014BR.GOV.BCB.PIX2555api.itau/pix/qr/v2/3833825a-348b-44d9-9ccc-05caeac2edd85204000053039865802BR5922CONSORCIO SERENA GD 126004042762070503***630454CA</span>
     <button class="copy-btn">Copiar</button>
   </div>
 
@@ -210,6 +223,12 @@
     <span class="nome-boleto">LOJA - AGOSTO - R$ 2.302,23</span>
     <span class="codigo-boleto">00020101021226770014BR.GOV.BCB.PIX2555api.itau/pix/qr/v2/dd2ede7b-ed04-4ec0-a291-dd60ad82554f5204000053039865802BR5921CONSORCIO
       OMEGA GD 126005BELEM62070503***6304D8CF</span>
+    <button class="copy-btn">Copiar</button>
+  </div>
+
+<div class="linha-boleto">
+    <span class="nome-boleto">LOJA - OUTUBRO - R$ 2.119,58</span>
+    <span class="codigo-boleto">00020101021226770014BR.GOV.BCB.PIX2555api.itau/pix/qr/v2/e7f4cbc9-2dfc-43dd-8e1a-1bbd5b9076495204000053039865802BR5922CONSORCIO SERENA GD 126004042762070503***6304D791</span>
     <button class="copy-btn">Copiar</button>
   </div>
 
