--- a/index.html
+++ b/index.html
@@ -167,6 +167,18 @@
     <button class="copy-btn">Copiar</button>
   </div>
 
+  <div class="linha-boleto">
+    <span class="nome-boleto">ÁGUAS DO PARÁ (VILA) R$ 50,28 - Venc:09/11</span>
+    <span class="codigo-boleto">826600000002502847830002002025151032638901001047</span>
+    <button class="copy-btn">Copiar</button>
+  </div>
+
+<div class="linha-boleto">
+    <span class="nome-boleto">ÁGUAS DO PARÁ (VILA) R$ 200,65 - Venc:09/11</span>
+    <span class="codigo-boleto">8266000000024006547830007002025151032250201001048</span>
+    <button class="copy-btn">Copiar</button>
+  </div>
+
 <div class="linha-boleto">
     <span class="nome-boleto">SISTEMA CLARIAI R$ 221,90 - Venc:20/11</span>
     <span class="codigo-boleto">46191.11000 00000.000034 73225.956017 1 12710000022190</span>
