--- a/index.html
+++ b/index.html
@@ -156,26 +156,20 @@
   </div>
 
 <div class="linha-boleto">
-    <span class="nome-boleto">ENERGIA KITNET E R$ 643,28 - Venc:28/10</span>
-    <span class="codigo-boleto">00190000090337338417560980373173900000000064328</span>
-    <button class="copy-btn">Copiar</button>
-  </div>
-
-<div class="linha-boleto">
     <span class="nome-boleto">ENERGIA LOJA (EQUATORIAL) R$ 207,06 - Venc:05/11</span>
     <span class="codigo-boleto">00190.00009 03373.384167 61217.105172 1 00000000020706</span>
     <button class="copy-btn">Copiar</button>
   </div>
 
   <div class="linha-boleto">
-    <span class="nome-boleto">ÁGUAS DO PARÁ (VILA) R$ 50,28 - Venc:09/11</span>
-    <span class="codigo-boleto">826600000002502847830002002025151032638901001047</span>
+    <span class="nome-boleto">ÁGUAS DO PARÁ (VILA) R$ 200,65 - Venc:09/11</span>
+    <span class="codigo-boleto">8266000000024006547830007002025151032250201001048</span>
     <button class="copy-btn">Copiar</button>
   </div>
 
 <div class="linha-boleto">
-    <span class="nome-boleto">ÁGUAS DO PARÁ (VILA) R$ 200,65 - Venc:09/11</span>
-    <span class="codigo-boleto">8266000000024006547830007002025151032250201001048</span>
+    <span class="nome-boleto">CASAS BAHIA (GELADEIRA) R$ 349,19 - Venc:14/11</span>
+    <span class="codigo-boleto">00190000090354628100153292869178512650000034919</span>
     <button class="copy-btn">Copiar</button>
   </div>
 
