--- a/index.html
+++ b/index.html
@@ -149,6 +149,12 @@
   
   <h4>Códigos de Barras</h4>
   
+ <div class="linha-boleto">
+    <span class="nome-boleto">ÁGUAS DO PARÁ (LOJA) - R$ 200,71</span>
+    <span class="codigo-boleto">82660000002800714783009002025151420109901001049</span>
+    <button class="copy-btn">Copiar</button>
+  </div>
+
 
   <h4>PIX Copia e Cola</h4>
 
