--- a/index.html
+++ b/index.html
@@ -149,11 +149,34 @@
   
   <h4>Códigos de Barras</h4>
   
+<div class="linha-boleto">
+    <span class="nome-boleto">VENC:23/11_ENERGIA KITNET C_R$ 553,61</span>
+    <span class="codigo-boleto">00190000090337338420910628980178100000000055361</span>
+    <button class="copy-btn">Copiar</button>
+  </div>
+
+<div class="linha-boleto">
+    <span class="nome-boleto">VENC:23/11_ENERGIA KITNET E_R$ 628,18</span>
+    <span class="codigo-boleto">00190000090337338420910629080176900000000062818</span>
+    <button class="copy-btn">Copiar</button>
+  </div>
+
+
+
+
+
  <div class="linha-boleto">
-    <span class="nome-boleto">ÁGUAS DO PARÁ (LOJA) - R$ 200,71</span>
+    <span class="nome-boleto">VENC:08/12_ÁGUAS DO PARÁ (LOJA)_R$ 200,71</span>
     <span class="codigo-boleto">82660000002800714783009002025151420109901001049</span>
     <button class="copy-btn">Copiar</button>
   </div>
+
+<div class="linha-boleto">
+    <span class="nome-boleto">VENC:13/12_SISTEMA SENSEBOARD_R$ 597</span>
+    <span class="codigo-boleto">40192025321800000000200001134204512940000059700</span>
+    <button class="copy-btn">Copiar</button>
+  </div>
+
 
 
   <h4>PIX Copia e Cola</h4>
