--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
     <button class="copy-btn">Copiar</button>
   </div>
 
-
-
+<br>
+<br>
 
 
  <div class="linha-boleto">
@@ -177,6 +177,23 @@
     <button class="copy-btn">Copiar</button>
   </div>
 
+<div class="linha-boleto">
+    <span class="nome-boleto">VENC:14/12_CASAS BAHIA GELADEIRA (14/15)_R$ 349,19</span>
+    <span class="codigo-boleto">00190000090354628100153292870176712950000034919</span>
+    <button class="copy-btn">Copiar</button>
+  </div>
+
+<div class="linha-boleto">
+    <span class="nome-boleto">VENC:20/12_SISTEMA CLARIAI_R$ 221,90</span>
+    <span class="codigo-boleto">46191.11000 00000.000034 82461.239012 7 13010000022190</span>
+    <button class="copy-btn">Copiar</button>
+  </div>
+
+  <div class="linha-boleto">
+    <span class="nome-boleto">VENC:22/12_INTERNET NIO (DEZ)_R$ 163,24</span>
+    <span class="codigo-boleto">84650000001632400082012347199064482548300200</span>
+    <button class="copy-btn">Copiar</button>
+  </div>
 
 
   <h4>PIX Copia e Cola</h4>
@@ -187,46 +204,61 @@
 
   <h4>PIX Copia e Cola</h4>
   <div class="linha-boleto">
-    <span class="nome-boleto">MÁRCIA - FEVEREIRO - R$ 1.197,55</span>
+    <span class="nome-boleto">MÁRCIA_FEVEREIRO - R$ 1.197,55</span>
     <span class="codigo-boleto">00020101021226770014BR.GOV.BCB.PIX2555api.itau/pix/qr/v2/49f8e9f6-a667-490e-8ecd-0768f4587ac95204000053039865802BR5921CONSORCIO
       OMEGA GD 126005BELEM62070503***6304F79D</span>
     <button class="copy-btn">Copiar</button>
   </div>
 
   <div class="linha-boleto">
-    <span class="nome-boleto">MÁRCIA - SETEMBRO - R$ 1.161,94</span>
+    <span class="nome-boleto">MÁRCIA_SETEMBRO - R$ 1.161,94</span>
     <span class="codigo-boleto">00020101021226770014BR.GOV.BCB.PIX2555api.itau/pix/qr/v2/8b1134e9-b494-4967-8e0a-4bef9f5c2d015204000053039865802BR5921CONSORCIO OMEGA GD 126005BELEM62070503***6304C7A1</span>
+    <button class="copy-btn">Copiar</button>
+  </div>
+
+  <div class="linha-boleto">
+    <span class="nome-boleto">MÁRCIA_NOVEMBRO - R$ 67,52</span>
+    <span class="codigo-boleto">00020101021226770014BR.GOV.BCB.PIX2555api.itau/pix/qr/v2/7245346d-6eed-4e0e-b2e3-143a81bbcaf05204000053039865802BR5921CONSORCIO OMEGA GD 126004042762070503***6304A1B8</span>
     <button class="copy-btn">Copiar</button>
   </div>
 
 
 
+
   <div class="linha-boleto">
-    <span class="nome-boleto">LOJA - JUNHO - R$ 2.204,20</span>
+    <span class="nome-boleto">LOJA_JUNHO_R$ 2.204,20</span>
     <span class="codigo-boleto">00020101021226770014BR.GOV.BCB.PIX2555api.itau/pix/qr/v2/824f1dac-2b79-4373-a141-d5a35ce160685204000053039865802BR5921CONSORCIO
       OMEGA GD 126005BELEM62070503***63043402</span>
     <button class="copy-btn">Copiar</button>
   </div>
 
   <div class="linha-boleto">
-    <span class="nome-boleto">LOJA - JULHO - R$ 2.135,86</span>
+    <span class="nome-boleto">LOJA_JULHO_R$ 2.135,86</span>
     <span class="codigo-boleto">00020101021226770014BR.GOV.BCB.PIX2555api.itau/pix/qr/v2/14413ac1-23d3-4550-b30a-2fe7ad3e9a885204000053039865802BR5921CONSORCIO
       OMEGA GD 126005BELEM62070503***630483A5</span>
     <button class="copy-btn">Copiar</button>
   </div>
 
   <div class="linha-boleto">
-    <span class="nome-boleto">LOJA - AGOSTO - R$ 2.302,23</span>
+    <span class="nome-boleto">LOJA_AGOSTO_R$ 2.302,23</span>
     <span class="codigo-boleto">00020101021226770014BR.GOV.BCB.PIX2555api.itau/pix/qr/v2/dd2ede7b-ed04-4ec0-a291-dd60ad82554f5204000053039865802BR5921CONSORCIO
       OMEGA GD 126005BELEM62070503***6304D8CF</span>
     <button class="copy-btn">Copiar</button>
   </div>
 
 <div class="linha-boleto">
-    <span class="nome-boleto">LOJA - OUTUBRO - R$ 2.119,58</span>
+    <span class="nome-boleto">LOJA_OUTUBRO_R$ 2.119,58</span>
     <span class="codigo-boleto">00020101021226770014BR.GOV.BCB.PIX2555api.itau/pix/qr/v2/e7f4cbc9-2dfc-43dd-8e1a-1bbd5b9076495204000053039865802BR5922CONSORCIO SERENA GD 126004042762070503***6304D791</span>
     <button class="copy-btn">Copiar</button>
   </div>
+
+<div class="linha-boleto">
+    <span class="nome-boleto">LOJA_NOVEMBRO_R$ 2.047,53</span>
+    <span class="codigo-boleto">00020101021226770014BR.GOV.BCB.PIX2555api.itau/pix/qr/v2/c8f5d203-d0a5-4156-bc99-e276bfc63dd15204000053039865802BR5921CONSORCIO OMEGA GD 126004042762070503***63042F64</span>
+    <button class="copy-btn">Copiar</button>
+  </div>
+
+
 
   <script>
     document.querySelectorAll('.copy-btn').forEach(function (button) {
