--- a/index.html
+++ b/index.html
@@ -149,25 +149,9 @@
   
   <h4>Códigos de Barras</h4>
   
-<div class="linha-boleto">
-    <span class="nome-boleto">VENC:23/11_ENERGIA KITNET C_R$ 553,61</span>
-    <span class="codigo-boleto">00190000090337338420910628980178100000000055361</span>
-    <button class="copy-btn">Copiar</button>
-  </div>
-
-<div class="linha-boleto">
-    <span class="nome-boleto">VENC:23/11_ENERGIA KITNET E_R$ 628,18</span>
-    <span class="codigo-boleto">00190000090337338420910629080176900000000062818</span>
-    <button class="copy-btn">Copiar</button>
-  </div>
-
-<br>
-<br>
-
-
  <div class="linha-boleto">
     <span class="nome-boleto">VENC:08/12_ÁGUAS DO PARÁ (LOJA)_R$ 200,71</span>
-    <span class="codigo-boleto">82660000002800714783009002025151420109901001049</span>
+    <span class="codigo-boleto">82660000002 8 00714783000 9 00202515142 0 10990100104 9</span>
     <button class="copy-btn">Copiar</button>
   </div>
 
