--- a/index.html
+++ b/index.html
@@ -145,22 +145,29 @@
   });
 </script>
 
-
-  
+ 
   <h4>Códigos de Barras</h4>
   
  
-<div class="linha-boleto">
-    <span class="nome-boleto">VENC:20/12_SISTEMA CLARIAI_R$ 221,90</span>
-    <span class="codigo-boleto">46191.11000 00000.000034 82461.239012 7 13010000022190</span>
-    <button class="copy-btn">Copiar</button>
-  </div>
-
   <div class="linha-boleto">
     <span class="nome-boleto">VENC:22/12_INTERNET NIO (DEZ)_R$ 163,24</span>
     <span class="codigo-boleto">84650000001632400082012347199064482548300200</span>
     <button class="copy-btn">Copiar</button>
   </div>
+
+<div class="linha-boleto">
+    <span class="nome-boleto">VENC:05/01_ÁGUAS DO PARÁ (VILA)_R$ 49,10</span>
+    <span class="codigo-boleto">82620000000 6 49104783000 6 00202515182 6 58130100104 5</span>
+    <button class="copy-btn">Copiar</button>
+  </div>
+
+<div class="linha-boleto">
+    <span class="nome-boleto">VENC:05/01_ÁGUAS DO PARÁ (LOJA)_R$ 200,25</span>
+    <span class="codigo-boleto">82690000002 5 00254783000 6 00202515181 8 83480100104 3</span>
+    <button class="copy-btn">Copiar</button>
+  </div>
+
+
 
 
   <h4>PIX Copia e Cola</h4>
@@ -184,8 +191,8 @@
   </div>
 
   <div class="linha-boleto">
-    <span class="nome-boleto">MÁRCIA_NOVEMBRO - R$ 67,52</span>
-    <span class="codigo-boleto">00020101021226770014BR.GOV.BCB.PIX2555api.itau/pix/qr/v2/7245346d-6eed-4e0e-b2e3-143a81bbcaf05204000053039865802BR5921CONSORCIO OMEGA GD 126004042762070503***6304A1B8</span>
+    <span class="nome-boleto">MÁRCIA_DEZEMBRO - R$ 358,91</span>
+    <span class="codigo-boleto">00020101021226770014BR.GOV.BCB.PIX2555api.itau/pix/qr/v2/f2b6a7dd-142f-4ae2-bc77-b3c9617fbdb75204000053039865802BR5921CONSORCIO OMEGA GD 126004042762070503***63049131</span>
     <button class="copy-btn">Copiar</button>
   </div>
 
@@ -222,6 +229,12 @@
 <div class="linha-boleto">
     <span class="nome-boleto">LOJA_NOVEMBRO_R$ 2.047,53</span>
     <span class="codigo-boleto">00020101021226770014BR.GOV.BCB.PIX2555api.itau/pix/qr/v2/c8f5d203-d0a5-4156-bc99-e276bfc63dd15204000053039865802BR5921CONSORCIO OMEGA GD 126004042762070503***63042F64</span>
+    <button class="copy-btn">Copiar</button>
+  </div>
+
+<div class="linha-boleto">
+    <span class="nome-boleto">LOJA_DEZEMBRO_R$ 1.915,75</span>
+    <span class="codigo-boleto">00020101021226770014BR.GOV.BCB.PIX2555api.itau/pix/qr/v2/004aab16-5f85-448e-835d-f2e37b16e4855204000053039865802BR5921CONSORCIO OMEGA GD 126004042762070503***630466A7</span>
     <button class="copy-btn">Copiar</button>
   </div>
 
