--- a/index.html
+++ b/index.html
@@ -156,6 +156,18 @@
   </div>
 
 <div class="linha-boleto">
+    <span class="nome-boleto">VENC:30/12_KITNET C_EQUATORIAL _R$ 658,76</span>
+    <span class="codigo-boleto">00190.00009 03373.384209 50623.153173 1 00000000065876</span>
+    <button class="copy-btn">Copiar</button>
+  </div>
+
+<div class="linha-boleto">
+    <span class="nome-boleto">VENC:30/12_KITNET E_EQUATORIAL _R$ 698,30</span>
+    <span class="codigo-boleto">00190.00009 03373.384100 71935.502170 7 00000000069830</span>
+    <button class="copy-btn">Copiar</button>
+  </div>
+
+<div class="linha-boleto">
     <span class="nome-boleto">VENC:05/01_ÁGUAS DO PARÁ (VILA)_R$ 49,10</span>
     <span class="codigo-boleto">82620000000 6 49104783000 6 00202515182 6 58130100104 5</span>
     <button class="copy-btn">Copiar</button>
@@ -167,9 +179,21 @@
     <button class="copy-btn">Copiar</button>
   </div>
 
+<div class="linha-boleto">
+    <span class="nome-boleto">VENC:13/01_SISTEMA SENSEBOARD_R$ 597</span>
+    <span class="codigo-boleto">40192025325100000000300001344621113250000059700</span>
+    <button class="copy-btn">Copiar</button>
+  </div>
+
+<div class="linha-boleto">
+    <span class="nome-boleto">VENC:14/01_CASAS BAHIA_R$ 349,19</span>
+    <span class="codigo-boleto">00190 00009 03546 281001 53292 870176 7 12950000034919</span>
+    <button class="copy-btn">Copiar</button>
+  </div>
 
 
 
+  
   <h4>PIX Copia e Cola</h4>
 
 
