--- a/index.html
+++ b/index.html
@@ -185,7 +185,11 @@
     <button class="copy-btn">Copiar</button>
   </div>
 
-
+<div class="linha-boleto">
+    <span class="nome-boleto">VENC:20/01_SISTEMA CLARIAI_R$ 597</span>
+    <span class="codigo-boleto">46191.11000 00000.000034 93376.821018 1 13320000022190</span>
+    <button class="copy-btn">Copiar</button>
+  </div>
 
   
   <h4>PIX Copia e Cola</h4>
@@ -195,13 +199,7 @@
 <img src="serena.png" alt="serena.png" style="width: 100%; height: auto;">
 
   <h4>PIX Copia e Cola</h4>
-  <div class="linha-boleto">
-    <span class="nome-boleto">MÁRCIA_FEVEREIRO - R$ 1.197,55</span>
-    <span class="codigo-boleto">00020101021226770014BR.GOV.BCB.PIX2555api.itau/pix/qr/v2/49f8e9f6-a667-490e-8ecd-0768f4587ac95204000053039865802BR5921CONSORCIO
-      OMEGA GD 126005BELEM62070503***6304F79D</span>
-    <button class="copy-btn">Copiar</button>
-  </div>
-
+  
   <div class="linha-boleto">
     <span class="nome-boleto">MÁRCIA_SETEMBRO - R$ 1.161,94</span>
     <span class="codigo-boleto">00020101021226770014BR.GOV.BCB.PIX2555api.itau/pix/qr/v2/8b1134e9-b494-4967-8e0a-4bef9f5c2d015204000053039865802BR5921CONSORCIO OMEGA GD 126005BELEM62070503***6304C7A1</span>
@@ -221,13 +219,6 @@
     <span class="nome-boleto">LOJA_JUNHO_R$ 2.204,20</span>
     <span class="codigo-boleto">00020101021226770014BR.GOV.BCB.PIX2555api.itau/pix/qr/v2/824f1dac-2b79-4373-a141-d5a35ce160685204000053039865802BR5921CONSORCIO
       OMEGA GD 126005BELEM62070503***63043402</span>
-    <button class="copy-btn">Copiar</button>
-  </div>
-
-  <div class="linha-boleto">
-    <span class="nome-boleto">LOJA_JULHO_R$ 2.135,86</span>
-    <span class="codigo-boleto">00020101021226770014BR.GOV.BCB.PIX2555api.itau/pix/qr/v2/14413ac1-23d3-4550-b30a-2fe7ad3e9a885204000053039865802BR5921CONSORCIO
-      OMEGA GD 126005BELEM62070503***630483A5</span>
     <button class="copy-btn">Copiar</button>
   </div>
 
