--- a/index.html
+++ b/index.html
@@ -150,43 +150,43 @@
   
  
   <div class="linha-boleto">
-    <span class="nome-boleto">VENC:22/12_INTERNET NIO (DEZ)_R$ 163,24</span>
+    <span class="nome-boleto">VENC:22/12_INTERNET-NIO-(DEZ) R$ 163,24</span>
     <span class="codigo-boleto">84650000001632400082012347199064482548300200</span>
     <button class="copy-btn">Copiar</button>
   </div>
 
 <div class="linha-boleto">
-    <span class="nome-boleto">VENC:30/12_KITNET C_EQUATORIAL _R$ 658,76</span>
+    <span class="nome-boleto">VENC:30/12_KITNET-C-EQUATORIAL R$ 658,76</span>
     <span class="codigo-boleto">00190.00009 03373.384209 50623.153173 1 00000000065876</span>
     <button class="copy-btn">Copiar</button>
   </div>
 
 <div class="linha-boleto">
-    <span class="nome-boleto">VENC:30/12_KITNET E_EQUATORIAL _R$ 698,30</span>
+    <span class="nome-boleto">VENC:30/12_KITNET-E-EQUATORIAL R$ 698,30</span>
     <span class="codigo-boleto">00190.00009 03373.384100 71935.502170 7 00000000069830</span>
     <button class="copy-btn">Copiar</button>
   </div>
 
 <div class="linha-boleto">
-    <span class="nome-boleto">VENC:05/01_ÁGUAS DO PARÁ (LOJA)_R$ 200,25</span>
+    <span class="nome-boleto">VENC:05/01_ÁGUAS-DO-PARÁ-(LOJA) R$ 200,25</span>
     <span class="codigo-boleto">82690000002 5 00254783000 6 00202515181 8 83480100104 3</span>
     <button class="copy-btn">Copiar</button>
   </div>
 
 <div class="linha-boleto">
-    <span class="nome-boleto">VENC:13/01_SISTEMA SENSEBOARD_R$ 597</span>
+    <span class="nome-boleto">VENC:13/01_SISTEMA-SENSEBOARD R$ 597</span>
     <span class="codigo-boleto">40192025325100000000300001344621113250000059700</span>
     <button class="copy-btn">Copiar</button>
   </div>
 
 <div class="linha-boleto">
-    <span class="nome-boleto">VENC:14/01_CASAS BAHIA_R$ 349,19</span>
+    <span class="nome-boleto">VENC:14/01_CASAS-BAHIA R$ 349,19</span>
     <span class="codigo-boleto">00190 00009 03546 281001 53292 870176 7 12950000034919</span>
     <button class="copy-btn">Copiar</button>
   </div>
 
 <div class="linha-boleto">
-    <span class="nome-boleto">VENC:20/01_SISTEMA CLARIAI_R$ 597</span>
+    <span class="nome-boleto">VENC:20/01_SISTEMA-CLARIAI R$ 221,90</span>
     <span class="codigo-boleto">46191.11000 00000.000034 93376.821018 1 13320000022190</span>
     <button class="copy-btn">Copiar</button>
   </div>
@@ -201,13 +201,13 @@
   <h4>PIX Copia e Cola</h4>
   
   <div class="linha-boleto">
-    <span class="nome-boleto">MÁRCIA_SETEMBRO - R$ 1.161,94</span>
+    <span class="nome-boleto">MÁRCIA_SETEMBRO R$ 1.161,94</span>
     <span class="codigo-boleto">00020101021226770014BR.GOV.BCB.PIX2555api.itau/pix/qr/v2/8b1134e9-b494-4967-8e0a-4bef9f5c2d015204000053039865802BR5921CONSORCIO OMEGA GD 126005BELEM62070503***6304C7A1</span>
     <button class="copy-btn">Copiar</button>
   </div>
 
   <div class="linha-boleto">
-    <span class="nome-boleto">MÁRCIA_DEZEMBRO - R$ 358,91</span>
+    <span class="nome-boleto">MÁRCIA_DEZEMBRO R$ 358,91</span>
     <span class="codigo-boleto">00020101021226770014BR.GOV.BCB.PIX2555api.itau/pix/qr/v2/f2b6a7dd-142f-4ae2-bc77-b3c9617fbdb75204000053039865802BR5921CONSORCIO OMEGA GD 126004042762070503***63049131</span>
     <button class="copy-btn">Copiar</button>
   </div>
@@ -216,33 +216,33 @@
 
 
   <div class="linha-boleto">
-    <span class="nome-boleto">LOJA_JUNHO_R$ 2.204,20</span>
+    <span class="nome-boleto">LOJA_JUNHO R$ 2.204,20</span>
     <span class="codigo-boleto">00020101021226770014BR.GOV.BCB.PIX2555api.itau/pix/qr/v2/824f1dac-2b79-4373-a141-d5a35ce160685204000053039865802BR5921CONSORCIO
       OMEGA GD 126005BELEM62070503***63043402</span>
     <button class="copy-btn">Copiar</button>
   </div>
 
   <div class="linha-boleto">
-    <span class="nome-boleto">LOJA_AGOSTO_R$ 2.302,23</span>
+    <span class="nome-boleto">LOJA_AGOSTO R$ 2.302,23</span>
     <span class="codigo-boleto">00020101021226770014BR.GOV.BCB.PIX2555api.itau/pix/qr/v2/dd2ede7b-ed04-4ec0-a291-dd60ad82554f5204000053039865802BR5921CONSORCIO
       OMEGA GD 126005BELEM62070503***6304D8CF</span>
     <button class="copy-btn">Copiar</button>
   </div>
 
 <div class="linha-boleto">
-    <span class="nome-boleto">LOJA_OUTUBRO_R$ 2.119,58</span>
+    <span class="nome-boleto">LOJA_OUTUBRO R$ 2.119,58</span>
     <span class="codigo-boleto">00020101021226770014BR.GOV.BCB.PIX2555api.itau/pix/qr/v2/e7f4cbc9-2dfc-43dd-8e1a-1bbd5b9076495204000053039865802BR5922CONSORCIO SERENA GD 126004042762070503***6304D791</span>
     <button class="copy-btn">Copiar</button>
   </div>
 
 <div class="linha-boleto">
-    <span class="nome-boleto">LOJA_NOVEMBRO_R$ 2.047,53</span>
+    <span class="nome-boleto">LOJA_NOVEMBRO R$ 2.047,53</span>
     <span class="codigo-boleto">00020101021226770014BR.GOV.BCB.PIX2555api.itau/pix/qr/v2/c8f5d203-d0a5-4156-bc99-e276bfc63dd15204000053039865802BR5921CONSORCIO OMEGA GD 126004042762070503***63042F64</span>
     <button class="copy-btn">Copiar</button>
   </div>
 
 <div class="linha-boleto">
-    <span class="nome-boleto">LOJA_DEZEMBRO_R$ 1.915,75</span>
+    <span class="nome-boleto">LOJA_DEZEMBRO R$ 1.915,75</span>
     <span class="codigo-boleto">00020101021226770014BR.GOV.BCB.PIX2555api.itau/pix/qr/v2/004aab16-5f85-448e-835d-f2e37b16e4855204000053039865802BR5921CONSORCIO OMEGA GD 126004042762070503***630466A7</span>
     <button class="copy-btn">Copiar</button>
   </div>
