--- a/index.html
+++ b/index.html
@@ -148,34 +148,11 @@
  
   <h4>Códigos de Barras</h4>
   
- 
-  <div class="linha-boleto">
-    <span class="nome-boleto">VENC:22/12_INTERNET-NIO-(DEZ) R$ 163,24</span>
-    <span class="codigo-boleto">84650000001632400082012347199064482548300200</span>
-    <button class="copy-btn">Copiar</button>
-  </div>
-
-<div class="linha-boleto">
-    <span class="nome-boleto">VENC:30/12_KITNET-C-EQUATORIAL R$ 658,76</span>
-    <span class="codigo-boleto">00190.00009 03373.384209 50623.153173 1 00000000065876</span>
-    <button class="copy-btn">Copiar</button>
-  </div>
-
-<div class="linha-boleto">
-    <span class="nome-boleto">VENC:30/12_KITNET-E-EQUATORIAL R$ 698,30</span>
-    <span class="codigo-boleto">00190.00009 03373.384100 71935.502170 7 00000000069830</span>
-    <button class="copy-btn">Copiar</button>
-  </div>
+  
 
 <div class="linha-boleto">
     <span class="nome-boleto">VENC:05/01_ÁGUAS-DO-PARÁ-(LOJA) R$ 200,25</span>
     <span class="codigo-boleto">82690000002 5 00254783000 6 00202515181 8 83480100104 3</span>
-    <button class="copy-btn">Copiar</button>
-  </div>
-
-<div class="linha-boleto">
-    <span class="nome-boleto">VENC:13/01_SISTEMA-SENSEBOARD R$ 597</span>
-    <span class="codigo-boleto">40192025325100000000300001344621113250000059700</span>
     <button class="copy-btn">Copiar</button>
   </div>
 
@@ -185,11 +162,13 @@
     <button class="copy-btn">Copiar</button>
   </div>
 
+
 <div class="linha-boleto">
-    <span class="nome-boleto">VENC:20/01_SISTEMA-CLARIAI R$ 221,90</span>
-    <span class="codigo-boleto">46191.11000 00000.000034 93376.821018 1 13320000022190</span>
+    <span class="nome-boleto">VENC:23/01_INTERNET-NIO-(JAN) R$ 159,85</span>
+    <span class="codigo-boleto">03399068445500000002062717301014913350000015985</span>
     <button class="copy-btn">Copiar</button>
   </div>
+
 
   
   <h4>PIX Copia e Cola</h4>
@@ -211,6 +190,13 @@
     <span class="codigo-boleto">00020101021226770014BR.GOV.BCB.PIX2555api.itau/pix/qr/v2/f2b6a7dd-142f-4ae2-bc77-b3c9617fbdb75204000053039865802BR5921CONSORCIO OMEGA GD 126004042762070503***63049131</span>
     <button class="copy-btn">Copiar</button>
   </div>
+
+  <div class="linha-boleto">
+    <span class="nome-boleto">MÁRCIA_JANEIRO R$ 81,30</span>
+    <span class="codigo-boleto">00020101021226770014BR.GOV.BCB.PIX2555api.itau/pix/qr/v2/6f973ff1-ae67-4dbf-b0fc-5a2f1400ea555204000053039865802BR5921CONSORCIO OMEGA GD 126004042762070503***6304C7DB</span>
+    <button class="copy-btn">Copiar</button>
+  </div>
+
 
 
 
@@ -244,6 +230,12 @@
 <div class="linha-boleto">
     <span class="nome-boleto">LOJA_DEZEMBRO R$ 1.915,75</span>
     <span class="codigo-boleto">00020101021226770014BR.GOV.BCB.PIX2555api.itau/pix/qr/v2/004aab16-5f85-448e-835d-f2e37b16e4855204000053039865802BR5921CONSORCIO OMEGA GD 126004042762070503***630466A7</span>
+    <button class="copy-btn">Copiar</button>
+  </div>
+
+<div class="linha-boleto">
+    <span class="nome-boleto">LOJA_JANEIRO R$ 1.289,70</span>
+    <span class="codigo-boleto">00020101021226770014BR.GOV.BCB.PIX2555api.itau/pix/qr/v2/0f4c8f42-1475-40ba-8648-2b6ef89d781c5204000053039865802BR5921CONSORCIO OMEGA GD 126004042762070503***63049AAA</span>
     <button class="copy-btn">Copiar</button>
   </div>
 
