--- a/index.html
+++ b/index.html
@@ -169,8 +169,20 @@
     <button class="copy-btn">Copiar</button>
   </div>
 
+  <div class="linha-boleto">
+    <span class="nome-boleto">VENC:13/02_SISTEMA SENSEBOARD R$ 647,00</span>
+    <span class="codigo-boleto">40192026073400000000900001796713513560000064700</span>
+    <button class="copy-btn">Copiar</button>
+  </div>
 
-  
+<div class="linha-boleto">
+    <span class="nome-boleto">VENC:20/02_SISTEMA CLARIAI R$ 228,90</span>
+    <span class="codigo-boleto">46191.11000 00000.000042 04845.968017 6 13630000022890</span>
+    <button class="copy-btn">Copiar</button>
+  </div>
+
+
+
   <h4>PIX Copia e Cola</h4>
 
 
