--- a/index.html
+++ b/index.html
@@ -162,7 +162,6 @@
     <button class="copy-btn">Copiar</button>
   </div>
 
-
 <div class="linha-boleto">
     <span class="nome-boleto">VENC:23/01_INTERNET-NIO-(JAN) R$ 159,85</span>
     <span class="codigo-boleto">03399068445500000002062717301014913350000015985</span>
@@ -183,9 +182,38 @@
 
 
 
+<img src="equatorial-logo.png" alt="equatorial-logo.png" style="width: 25%; height: auto;">
+
+<div class="linha-boleto">
+    <span class="nome-boleto">VENC:28/01 (JAN)_ENERGIA KITNET C R$ 493,75</span>
+    <span class="codigo-boleto">00190.00009 03373.384217 30603.143170 8 00000000049375</span>
+    <button class="copy-btn">Copiar</button>
+  </div>
+
+<div class="linha-boleto">
+    <span class="nome-boleto">VENC:28/01 (JAN)_ENERGIA KITNET E R$ 529,19</span>
+    <span class="codigo-boleto">00190.00009 03373.384217 30603.234177 9 00000000052919</span>
+    <button class="copy-btn">Copiar</button>
+  </div>
+
+
+<div class="linha-boleto">
+    <span class="nome-boleto">VENC:08/01 (DEZ)_ENERGIA LOJA R$ 205,46</span>
+    <span class="codigo-boleto">00190.00009 03373.384126 81623.587177 5 00000000020546</span>
+    <button class="copy-btn">Copiar</button>
+  </div>
+
+<div class="linha-boleto">
+    <span class="nome-boleto">VENC:04/02 (JAN)_ENERGIA LOJA R$ 202,53</span>
+    <span class="codigo-boleto">00190.00009 03373.384167 81287.328173 7 00000000020253</span>
+    <button class="copy-btn">Copiar</button>
+  </div>
+
+
+
+
+
   <h4>PIX Copia e Cola</h4>
-
-
 
 <img src="serena.png" alt="serena.png" style="width: 100%; height: auto;">
 
@@ -281,7 +309,7 @@
     padding: 10px 0;
   ">
     <img src="minha-logo.png" alt="Logo" width="24" height="24">
-    <span>© 2025 Rogério Estumano</span>
+    <span>© 2026 Rogério Estumano</span>
   </footer>
 </body>
 </html>
