--- a/index.html
+++ b/index.html
@@ -145,75 +145,32 @@
   });
 </script>
 
- 
-  <h4>Códigos de Barras</h4>
   
   
-
-<div class="linha-boleto">
-    <span class="nome-boleto">VENC:05/01_ÁGUAS-DO-PARÁ-(LOJA) R$ 200,25</span>
-    <span class="codigo-boleto">82690000002 5 00254783000 6 00202515181 8 83480100104 3</span>
-    <button class="copy-btn">Copiar</button>
-  </div>
-
-<div class="linha-boleto">
-    <span class="nome-boleto">VENC:14/01_CASAS-BAHIA R$ 349,19</span>
-    <span class="codigo-boleto">00190 00009 03546 281001 53292 870176 7 12950000034919</span>
-    <button class="copy-btn">Copiar</button>
-  </div>
-
+<img src="internetnio-logo.png" alt="internetnio-logo.png" style="width: 40%; height: auto;">  
+  
 <div class="linha-boleto">
     <span class="nome-boleto">VENC:23/01_INTERNET-NIO-(JAN) R$ 159,85</span>
-    <span class="codigo-boleto">03399068445500000002062717301014913350000015985</span>
-    <button class="copy-btn">Copiar</button>
-  </div>
-
-  <div class="linha-boleto">
-    <span class="nome-boleto">VENC:13/02_SISTEMA SENSEBOARD R$ 647,00</span>
-    <span class="codigo-boleto">40192026073400000000900001796713513560000064700</span>
+    <span class="codigo-boleto">03399133500000159859068455000000026271730101</span>
     <button class="copy-btn">Copiar</button>
   </div>
 
 <div class="linha-boleto">
+    <span class="nome-boleto">VENC:23/02_INTERNET-NIO-(FEV) R$ 164,36</span>
+    <span class="codigo-boleto">03394136600000164369068455000000052942500101</span>
+    <button class="copy-btn">Copiar</button>
+  </div>
+
+<h4>Códigos de Barras</h4>
+
+ <div class="linha-boleto">
     <span class="nome-boleto">VENC:20/02_SISTEMA CLARIAI R$ 228,90</span>
     <span class="codigo-boleto">46191.11000 00000.000042 04845.968017 6 13630000022890</span>
     <button class="copy-btn">Copiar</button>
   </div>
 
 
-
-<img src="equatorial-logo.png" alt="equatorial-logo.png" style="width: 25%; height: auto;">
-
-<div class="linha-boleto">
-    <span class="nome-boleto">VENC:28/01 (JAN)_ENERGIA KITNET C R$ 493,75</span>
-    <span class="codigo-boleto">00190.00009 03373.384217 30603.143170 8 00000000049375</span>
-    <button class="copy-btn">Copiar</button>
-  </div>
-
-<div class="linha-boleto">
-    <span class="nome-boleto">VENC:28/01 (JAN)_ENERGIA KITNET E R$ 529,19</span>
-    <span class="codigo-boleto">00190.00009 03373.384217 30603.234177 9 00000000052919</span>
-    <button class="copy-btn">Copiar</button>
-  </div>
-
-
-<div class="linha-boleto">
-    <span class="nome-boleto">VENC:08/01 (DEZ)_ENERGIA LOJA R$ 205,46</span>
-    <span class="codigo-boleto">00190.00009 03373.384126 81623.587177 5 00000000020546</span>
-    <button class="copy-btn">Copiar</button>
-  </div>
-
-<div class="linha-boleto">
-    <span class="nome-boleto">VENC:04/02 (JAN)_ENERGIA LOJA R$ 202,53</span>
-    <span class="codigo-boleto">00190.00009 03373.384167 81287.328173 7 00000000020253</span>
-    <button class="copy-btn">Copiar</button>
-  </div>
-
-
-
-
-
-  <h4>PIX Copia e Cola</h4>
+ 
 
 <img src="serena.png" alt="serena.png" style="width: 100%; height: auto;">
 
